<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@color/background_app_todo"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/title_text_todo"
        android:hint="@string/dialog_hint_task"
        android:textColor="@color/title_text_todo"
        android:textColorHint="@color/title_text_todo" />

    <RadioGroup
        android:id="@+id/rgCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbPersonal"
            style="@style/Personal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/personal_category"
            android:checked="true"
            android:text="@string/dialog_personal"
            android:textColor="@color/title_text_todo"
            app:useMaterialThemeColors="false" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbBusiness"
            style="@style/Business"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/business_category"
            android:text="@string/dialog_Business"
            android:textColor="@color/title_text_todo"
            app:useMaterialThemeColors="false" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbOther"
            style="@style/Other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/other_category"
            android:text="@string/dialog_others"
            android:textColor="@color/title_text_todo"
            app:useMaterialThemeColors="false" />

    </RadioGroup>

    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/todo_accent"
        android:text="@string/dialog_add_task"
        android:textColor="@color/title_text_todo" />

</LinearLayout>
